cmake_minimum_required(VERSION 3.25)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Merge_Strings_Alternately P1768.cpp)
add_executable(Find_The_Difference P389.cpp)
add_executable(Find_The_Index P28.cpp)
add_executable(Valid_Anagram P242.cpp)
add_executable(Faulty_Keyboard P2810.cpp)
add_executable(Array_Split P2811.cpp)
add_executable(Safe_Way P2812.cpp)
add_executable(Treeees P894.cpp)
add_executable(Repeat P459.cpp)
add_executable(Move_Zeroes P283.cpp)
add_executable(Sliding P239.cpp)
